[package]
name = "populated"
version = "0.0.1"
edition = "2021"
description = "Collection types that are guaranteed to be populated. Based on std::collections types."
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
